[tool.poetry]
name = "chatbot-streamlit"
version = "0.1.0"
description = ""
authors = ["John Feng <johnfengphd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.35.8"
streamlit = "^1.36.0"
st-pages = "^0.5.0"
langchain = "^0.2.6"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
